--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,12 @@
 [project]
 name = "tulahackbackend"
 version = "0.1.0"
-description = "Add your description here"
+description = "Backend for TulaHack2025 team Supernova"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.12",
+    "jwt>=1.3.1",
+    "requests>=2.32.3",
+    "sqlalchemy>=2.0.40",
+    "uvicorn>=0.34.1",
+]
